menifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: back-service
spec:
  type: NodePort
  selector:
    app: myapp
    tier: backend
  ports:
  - port: 80
    targetPort: 8080
