menifest/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: back-ingress
  labels:
    tier: backend
    name: back-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: back-service
      port:
        number: 80
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: back-service
            port: 
              number: 80
